[package]
name = "hlcup1"
version = "0.1.0"
authors = ["Dmitrij Fedorenko <c0va23@gmail.com>"]

[dependencies]
futures = "0.1"
hyper = "0.11"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.5"

log = "0.3"
env_logger = "0.4"

net2 = "0.2"
tokio-core = "0.1"

zip = "0.2"

chrono = "0.4"

fnv = "1.0"

[dev-dependencies]
matches = "0.1"
